corrected hero video layout, moved section-2 image up to overlap w section-1

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -155,13 +155,9 @@ h3 {
 
 .custom-video {
     filter: contrast(1.4) brightness(1.95) blur(0.0em) saturate(4%);
-  position: absolute;
-  top: 0;
-  left: 0;
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
 }
 
 .newrow:nth-child(even) {
